add rabbitMQ for chat box between resident and collector (not tested)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,37 @@ server.ssl.key-store=classpath:keystore.p12
 server.ssl.key-store-password=password123
 server.ssl.key-store-type=PKCS12
 server.ssl.key-alias=localhost
+
+
+# application.properties
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
+spring.rabbitmq.virtual-host=/
+
+# Enable message listener
+spring.rabbitmq.listener.simple.retry.enabled=true
+spring.rabbitmq.listener.simple.retry.initial-interval=1000ms
+spring.rabbitmq.listener.simple.retry.max-attempts=3
+spring.rabbitmq.listener.simple.retry.multiplier=1.5
+spring.rabbitmq.listener.simple.retry.max-interval=10000ms
+
+# Connection pool settings
+spring.rabbitmq.connection-timeout=5000
+spring.rabbitmq.template.receive-timeout=2000
+spring.rabbitmq.template.reply-timeout=2000
+spring.rabbitmq.cache.channel.size=25
+spring.rabbitmq.cache.connection.mode=channel
+
+# File upload settings for images
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+
+# Logging for RabbitMQ operations
+logging.level.org.springframework.amqp=INFO
+rabbitmq.queue.resident=resident.queue
+rabbitmq.queue.collector=collector.queue
+rabbitmq.exchange=message.exchange
+rabbitmq.routing.resident=resident.routing.key
+rabbitmq.routing.collector=collector.routing.key
